<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatarImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/a_verify_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/avatar"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/verifyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/hind_guntur"
        android:text="@string/profile_info"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/mainText"
        app:layout_constraintEnd_toEndOf="@+id/avatarImageView"
        app:layout_constraintStart_toStartOf="@+id/avatarImageView"
        app:layout_constraintTop_toBottomOf="@+id/avatarImageView" />

    <TextView
        android:id="@+id/verifyDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hind_guntur"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/verifyTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/please_set_your_name_and_your_avatar"
        android:layout_marginTop="2dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verifyDetailTextView">

        <LinearLayout
            android:id="@+id/inputNameCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:autofillHints=""
                android:background="@drawable/textbox_border"
                android:ems="10"
                android:hint="@string/type_your_name_here"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#DDDDDD"
                tools:ignore="LabelFor,TextContrastCheck" />

            <Button
                android:id="@+id/setupProfileBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:minHeight="48dp"
                android:text="@string/setup_profile"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>