<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPActivity">

    <ImageView
        android:id="@+id/verifyImageView"
        android:layout_width="210dp"
        android:layout_height="194dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/a_verify_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/verify_pic"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/verifyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/hind_guntur"
        android:text="@string/an_otp_be_sent_to"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/mainText"
        app:layout_constraintEnd_toEndOf="@+id/verifyImageView"
        app:layout_constraintStart_toStartOf="@+id/verifyImageView"
        app:layout_constraintTop_toBottomOf="@+id/verifyImageView" />

    <TextView
        android:id="@+id/verifyDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hind_guntur"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/verifyTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/type_it_below"
        android:layout_marginTop="2dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verifyDetailTextView">

        <LinearLayout
            android:id="@+id/inputOTPCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.mukesh.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="number"
                android:itemBackground="@drawable/radius_background"
                app:OtpItemCount="6"
                app:OtpLineColor="@color/green"
                app:OtpViewType="line"
                tools:ignore="SpeakableTextPresentCheck"
                />

            <Button
                android:id="@+id/verifyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:minHeight="48dp"
                android:text="@string/ok"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>